gql-server/k8s/production/gql-server-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: d-prd-chordclub-gql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chordclub--gql-server
      env: prd
  template:
    metadata:
      labels:
        app: chordclub--gql-server
        env: prd
    spec:
      containers:
      - image: gcr.io/chord-club/gql-server:r2020-11-05.r01
        imagePullPolicy: IfNotPresent
        name: prd-chordclub-gql-server
        ports:
        - containerPort: 4000
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /v1/health
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /v1/health
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /data
          name: secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          defaultMode: 420
          secretName: prd-chordclub-secrets--v003
