gql-server/k8s/production/gql-server-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chordclub--gql-server
    env: prd
  name: s-prd-chordclub-gql-server
spec:
  ports:
  - name: gql-server-http
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: chordclub--gql-server
    env: prd
  type: NodePort
